# python_code_extractor

./: .gitignore  .pyre_configuration  README.md  constraints-style.txt  requirements-dev.txt  requirements-style.txt  setup.cfg
.github/workflows/: code_style.yml  codeql.yml  release.yml  test.yml  unit_tests.yml
src/code_extractor/: __init__.py  extracted_code.py
src/code_extractor/extractor/: extract.py  literals.py
src/code_extractor/loader/: __init__.py  load.py
src/code_extractor/pickle/: __init__.py  pickle_code.py
tests/extract_code_tests/: test_extract.py  test_extract_1.py  test_extract_11.py  test_extract_12.py  test_extract_13.py  test_extract_2.py  test_extract_3.py
tests/extract_code_tests/expected_results/: class_1.json  class_1_method.json  class_2.json  class_2_method.json  function_1.json  function_10.json  function_11.json  function_12.json  function_2.json  function_3.json  function_4.json  function_5.json  function_6.json  function_7.json  function_8.json  function_9.json
tests/integration_tests/: test_class_1.py  test_class_2.py  test_function_1.py  test_function_10.py  test_function_11.py  test_function_12.py  test_function_2.py  test_function_3.py  test_function_4.py  test_function_5.py  test_function_6.py  test_function_7.py  test_function_8.py  test_function_9.py  test_function_dict.py  test_function_dict_enum.py  test_function_enum.py  test_function_enum_module.py  test_function_module_dict.py  test_function_module_dict_enum.py
tests/integration_tests/dummy/: __init__.py
tests/unit_tests/: test_import.py  test_pickle.py
(+18 files in other folders)
