[metadata]
name = code-extractor
version = attr: code_extractor.__version__
author = MatteoH2O1999
author_email = dellacqua.matteo99@gmail.com
description = Extract source code from python objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MatteoH2O1999/python_code_extractor
project_urls =
    Bug Tracker = https://github.com/MatteoH2O1999/python_code_extractor/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src